==> best-intheworld/stm32/LVGL/Bsp/lcd/lcd.c <==
#include "lcd.h"
#include "ASCII_font.h"
#define LCD_BASE     (uint32_t)(((0x60000000 + 0x4000000 * (4 - 1)) | ((1 << 10) * 2)) - 2)
#define LCD         ((LCD_TypeDef *)LCD_BASE)

void lcd_ex_st7789_reginit(void)
{
    LCD_writeCommand(0x11);

    delay_ms(120);

    LCD_writeCommand(0x36);
    LCD_writeData(0x08);

    LCD_writeCommand(0x3A);
    LCD_writeData(0X05);

    LCD_writeCommand(0xB2);
    LCD_writeData(0x0C);
    LCD_writeData(0x0C);
    LCD_writeData(0x00);
    LCD_writeData(0x33);
    LCD_writeData(0x33);

    LCD_writeCommand(0xB7);
    LCD_writeData(0x35);

    LCD_writeCommand(0xBB); /* vcom */
    LCD_writeData(0x32);  /* 30 */

    LCD_writeCommand(0xC0);
    LCD_writeData(0x0C);

    LCD_writeCommand(0xC2);
    LCD_writeData(0x01);

    LCD_writeCommand(0xC3); /* vrh */
    LCD_writeData(0x10);  /* 17 0D */

    LCD_writeCommand(0xC4); /* vdv */
    LCD_writeData(0x20);  /* 20 */

    LCD_writeCommand(0xC6);
    LCD_writeData(0x0f);

    LCD_writeCommand(0xD0);
    LCD_writeData(0xA4); 
    LCD_writeData(0xA1); 

    LCD_writeCommand(0xE0); /* Set Gamma  */
    LCD_writeData(0xd0);
    LCD_writeData(0x00);
    LCD_writeData(0x02);
    LCD_writeData(0x07);
    LCD_writeData(0x0a);
    LCD_writeData(0x28);
    LCD_writeData(0x32);
    LCD_writeData(0X44);
    LCD_writeData(0x42);
    LCD_writeData(0x06);
    LCD_writeData(0x0e);
    LCD_writeData(0x12);
    LCD_writeData(0x14);
    LCD_writeData(0x17);

    LCD_writeCommand(0XE1);  /* Set Gamma */
    LCD_writeData(0xd0);
    LCD_writeData(0x00);
    LCD_writeData(0x02);
    LCD_writeData(0x07);
    LCD_writeData(0x0a);
    LCD_writeData(0x28);
    LCD_writeData(0x31);
    LCD_writeData(0x54);
    LCD_writeData(0x47);
    LCD_writeData(0x0e);
    LCD_writeData(0x1c);
    LCD_writeData(0x17);
    LCD_writeData(0x1b); 
    LCD_writeData(0x1e);

    LCD_writeCommand(0x2A);
    LCD_writeData(0x00);
    LCD_writeData(0x00);
    LCD_writeData(0x00);
    LCD_writeData(0xef);

    LCD_writeCommand(0x2B);
    LCD_writeData(0x00);
    LCD_writeData(0x00);
    LCD_writeData(0x01);
    LCD_writeData(0x3f);

    LCD_writeCommand(0x29); /* display on */
}

void LCD_Init(void)
{
    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_FSMC, ENABLE);
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB | RCC_APB2Periph_GPIOD | RCC_APB2Periph_GPIOE | RCC_APB2Periph_GPIOG, ENABLE);

    GPIO_InitTypeDef GPIO_InitStructure;
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIOB, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_12;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
    GPIO_Init(GPIOG, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_4 | GPIO_Pin_5 | GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | GPIO_Pin_14 | GPIO_Pin_15;
    GPIO_Init(GPIOD, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7 | GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | GPIO_Pin_11 | GPIO_Pin_12 | GPIO_Pin_13 | GPIO_Pin_14 | GPIO_Pin_15;
    GPIO_Init(GPIOE, &GPIO_InitStructure);

    FSMC_NORSRAMInitTypeDef FSMC_NORSRAM_InitStructure;
    FSMC_NORSRAMTimingInitTypeDef FSMC_NORSRAM_writeTimingInitStructure;
    FSMC_NORSRAMTimingInitTypeDef FSMC_NORSRAM_readWriteTimingInitStructure;

    FSMC_NORSRAM_writeTimingInitStructure.FSMC_AccessMode = FSMC_AccessMode_A;
    FSMC_NORSRAM_writeTimingInitStructure.FSMC_AddressHoldTime = 1;
    FSMC_NORSRAM_writeTimingInitStructure.FSMC_AddressSetupTime = 0;
    FSMC_NORSRAM_writeTimingInitStructure.FSMC_BusTurnAroundDuration = 0;
    FSMC_NORSRAM_writeTimingInitStructure.FSMC_CLKDivision = 0;
    FSMC_NORSRAM_writeTimingInitStructure.FSMC_DataLatency = 0;
    FSMC_NORSRAM_writeTimingInitStructure.FSMC_DataSetupTime = 1;

    FSMC_NORSRAM_readWriteTimingInitStructure.FSMC_AccessMode = FSMC_AccessMode_A;
    FSMC_NORSRAM_readWriteTimingInitStructure.FSMC_AddressHoldTime = 1;
    FSMC_NORSRAM_readWriteTimingInitStructure.FSMC_AddressSetupTime = 0;
    FSMC_NORSRAM_readWriteTimingInitStructure.FSMC_BusTurnAroundDuration = 0;
    FSMC_NORSRAM_readWriteTimingInitStructure.FSMC_CLKDivision = 0;
    FSMC_NORSRAM_readWriteTimingInitStructure.FSMC_DataLatency = 0;
    FSMC_NORSRAM_readWriteTimingInitStructure.FSMC_DataSetupTime = 1;

    FSMC_NORSRAM_InitStructure.FSMC_AsynchronousWait = FSMC_AsynchronousWait_Disable;
    FSMC_NORSRAM_InitStructure.FSMC_Bank = FSMC_Bank1_NORSRAM4;
    FSMC_NORSRAM_InitStructure.FSMC_BurstAccessMode = FSMC_BurstAccessMode_Disable;
    FSMC_NORSRAM_InitStructure.FSMC_DataAddressMux = FSMC_DataAddressMux_Disable;
    FSMC_NORSRAM_InitStructure.FSMC_ExtendedMode = FSMC_ExtendedMode_Enable;
    FSMC_NORSRAM_InitStructure.FSMC_MemoryDataWidth = FSMC_MemoryDataWidth_16b;
    FSMC_NORSRAM_InitStructure.FSMC_MemoryType = FSMC_MemoryType_SRAM;
    FSMC_NORSRAM_InitStructure.FSMC_WaitSignal = FSMC_WaitSignal_Disable;
    FSMC_NORSRAM_InitStructure.FSMC_WaitSignalActive = FSMC_WaitSignalActive_BeforeWaitState;
    FSMC_NORSRAM_InitStructure.FSMC_WaitSignalPolarity = FSMC_WaitSignalPolarity_Low;
    FSMC_NORSRAM_InitStructure.FSMC_WrapMode = FSMC_WrapMode_Disable;
    FSMC_NORSRAM_InitStructure.FSMC_WriteOperation = FSMC_WriteOperation_Enable;
    FSMC_NORSRAM_InitStructure.FSMC_WriteTimingStruct = &FSMC_NORSRAM_writeTimingInitStructure;
    FSMC_NORSRAM_InitStructure.FSMC_ReadWriteTimingStruct = &FSMC_NORSRAM_readWriteTimingInitStructure;
    FSMC_NORSRAMInit(&FSMC_NORSRAM_InitStructure);

    FSMC_NORSRAMCmd(FSMC_Bank1_NORSRAM4, ENABLE);

    lcd_ex_st7789_reginit();
    LCD_DeInit();
    GPIO_SetBits(GPIOB, GPIO_Pin_0);//开背光
    LCD_clear(WHITE);
}

void LCD_showChar(uint16_t x, uint16_t y, uint8_t size, uint16_t color, uint16_t backcolor, char chr)
{
    LCD_setDisplayAera(x, x + size / 2 - 1, y, y + size - 1);
    LCD_prepareWriteRam();
    u8 *pfont;
    uint8_t realSize = 0;
    u8 temp;
    switch (size)
    {
        case 16:
        {
            realSize = 16;
            pfont = (u8*)&ASCII_1608[(chr - ' ') * realSize];
            for (int i = 0; i < size; i++)
            {
                temp = *pfont++;
                for (int j = 0; j < 8; j++)
                {
                    if (temp & 0x80)
                        LCD_writeData(color);
                    else
                        LCD_writeData(backcolor);
                    temp = temp << 1;
                }
            }
            break;
        }
        case 24:
        {
            realSize = 48;
            pfont = (u8*)&ASCII_2412[(chr - ' ') * realSize];
            for (int i = 0; i < size; i++)
            {
                temp = *pfont++;
                for (int j = 0; j < 8; j++)
                {
                    if (temp & 0x80)
                        LCD_writeData(color);
                    else
                        LCD_writeData(backcolor);
                    temp = temp << 1;
                }
                temp = *pfont++;
                for (int j = 0; j < 4; j++)
                {
                    if (temp & 0x80)
                        LCD_writeData(color);
                    else
                        LCD_writeData(backcolor);
                    temp = temp << 1;
                }
            }
            break;
        }
        case 32:
        {
            realSize = 64;
            pfont = (u8*)&ASCII_3216[(chr - ' ') * realSize];
            for (int i = 0; i < size; i++)
            {
                temp = *pfont++;
                for (int j = 0; j < 8; j++)
                {
                    if (temp & 0x80)
                        LCD_writeData(color);
                    else
                        LCD_writeData(backcolor);
                    temp = temp << 1;
                }
                temp = *pfont++;
                for (int j = 0; j < 8; j++)
                {
                    if (temp & 0x80)
                        LCD_writeData(color);
                    else
                        LCD_writeData(backcolor);
                    temp = temp << 1;
                }
            }
            break;
        }
        default:
            return;
    }
}
