==> best-intheworld/stm32/touch/Src/lcd.c <==
#include "lcd.h"
#include "lcdfont.h"
#include <stm32f1xx_ll_fsmc.h>
#include <stm32f1xx_hal_sram.h>
#define LCD_BL_Pin  GPIO_PIN_0
#define LCD_CS_Pin  GPIO_PIN_12
#define LCD_RS_Pin  GPIO_PIN_0
#define LCD_WR_Pin  GPIO_PIN_5
#define LCD_RD_Pin  GPIO_PIN_4
#define LCD_Data_Port1 GPIOD
#define LCD_Data0_Pin  GPIO_PIN_14
#define LCD_Data1_Pin  GPIO_PIN_15
#define LCD_Data2_Pin  GPIO_PIN_0
#define LCD_Data3_Pin  GPIO_PIN_1
#define LCD_Data13_Pin GPIO_PIN_8
#define LCD_Data14_Pin GPIO_PIN_9
#define LCD_Data15_Pin GPIO_PIN_10
#define LCD_Data_Port2  GPIOE
#define LCD_Data4_Pin   GPIO_PIN_7
#define LCD_Data5_Pin   GPIO_PIN_8
#define LCD_Data6_Pin   GPIO_PIN_9
#define LCD_Data7_Pin   GPIO_PIN_10
#define LCD_Data8_Pin   GPIO_PIN_11
#define LCD_Data9_Pin   GPIO_PIN_12
#define LCD_Data10_Pin  GPIO_PIN_13
#define LCD_Data11_Pin  GPIO_PIN_14
#define LCD_Data12_Pin  GPIO_PIN_15
#define LCD_BASE        (uint32_t)((0X60000000 + (0X4000000 * (4 - 1))) | (((1 << 10) * 2) -2))
#define LCD             ((LCD_TypeDef *) LCD_BASE)

void LCD_showChar(uint16_t x,uint16_t y,char chr,uint8_t size,uint8_t mode, uint32_t color,uint32_t backColor)
{
    uint8_t temp, t1, t;
    uint16_t y0 = y;
    uint8_t csize = 0;
    uint8_t *pfont = 0;

    csize = (size / 8 + ((size % 8) ? 1 : 0)) * (size / 2); /* 得到字体一个字符对应点阵集所占的字节数 */
    chr = chr - ' ';    /* 得到偏移后的值（ASCII字库是从空格开始取模，所以-' '就是对应字符的字库） */

    switch (size)
    {
        case 12:
            pfont = (uint8_t *)asc2_1206[chr];  /* 调用1206字体 */
            break;

        case 16:
            pfont = (uint8_t *)asc2_1608[chr];  /* 调用1608字体 */
            break;

        case 24:
            pfont = (uint8_t *)asc2_2412[chr];  /* 调用2412字体 */
            break;

        case 32:
            pfont = (uint8_t *)asc2_3216[chr];  /* 调用3216字体 */
            break;

        default:
            return ;
    }

    for (t = 0; t < csize; t++)
    {
        temp = pfont[t];    /* 获取字符的点阵数据 */

        for (t1 = 0; t1 < 8; t1++)   /* 一个字节8个点 */
        {
            if (temp & 0x80)        /* 有效点,需要显示 */
            {
                LCD_drawPoint(x, y, color);        /* 画点出来,要显示这个点 */
            }
            else if (mode == 0)     /* 无效点,不显示 */
            {
                LCD_drawPoint(x, y, backColor); /* 画背景色,相当于这个点不显示(注意背景色由全局变量控制) */
            }

            temp <<= 1; /* 移位, 以便获取下一个位的状态 */
            y++;

            if (y >= length)return;  /* 超区域了 */

            if ((y - y0) == size)   /* 显示完一列了? */
            {
                y = y0; /* y坐标复位 */
                x++;    /* x坐标递增 */

                if (x >= width)return;   /* x坐标超区域了 */

                break;
            }
        }
    }
}

void LCD_Init(void)
{
    //开启FSMC和GPIO时钟
    __HAL_RCC_FSMC_CLK_ENABLE();
    __HAL_RCC_GPIOB_CLK_ENABLE();
    __HAL_RCC_GPIOD_CLK_ENABLE();
    __HAL_RCC_GPIOE_CLK_ENABLE();
    __HAL_RCC_GPIOG_CLK_ENABLE();
    //数据引脚初始化
    GPIO_InitTypeDef GPIO_InitStruct;
    GPIO_InitStruct.Pin=LCD_Data0_Pin | LCD_Data1_Pin | LCD_Data2_Pin | LCD_Data3_Pin | LCD_Data13_Pin | LCD_Data14_Pin | LCD_Data15_Pin;
    GPIO_InitStruct.Mode=GPIO_MODE_AF_PP;//复用推挽输出
    GPIO_InitStruct.Pull=GPIO_PULLUP;
    GPIO_InitStruct.Speed=GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(LCD_Data_Port1,&GPIO_InitStruct);

    GPIO_InitStruct.Pin=LCD_Data4_Pin | LCD_Data5_Pin | LCD_Data6_Pin | LCD_Data7_Pin | LCD_Data8_Pin | LCD_Data9_Pin | LCD_Data10_Pin | LCD_Data11_Pin | LCD_Data12_Pin;
    GPIO_InitStruct.Mode=GPIO_MODE_AF_PP;//复用推挽输出
    GPIO_InitStruct.Pull=GPIO_PULLUP;
    GPIO_InitStruct.Speed=GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(LCD_Data_Port2,&GPIO_InitStruct);
    //控制引脚初始化
    GPIO_InitStruct.Pin=LCD_BL_Pin;
    GPIO_InitStruct.Mode=GPIO_MODE_OUTPUT_PP;//通用推挽输出
    GPIO_InitStruct.Pull=GPIO_PULLUP;
    GPIO_InitStruct.Speed=GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(GPIOB,&GPIO_InitStruct);

    GPIO_InitStruct.Pin=LCD_CS_Pin;
    GPIO_InitStruct.Mode=GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull=GPIO_PULLUP;
    GPIO_InitStruct.Speed=GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(GPIOG,&GPIO_InitStruct);
    
    GPIO_InitStruct.Pin=LCD_RS_Pin;
    GPIO_InitStruct.Mode=GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull=GPIO_PULLUP;
    GPIO_InitStruct.Speed=GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(GPIOG,&GPIO_InitStruct);

    GPIO_InitStruct.Pin=LCD_WR_Pin;
    GPIO_InitStruct.Mode=GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull=GPIO_PULLUP;
    GPIO_InitStruct.Speed=GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(GPIOD,&GPIO_InitStruct);

    GPIO_InitStruct.Pin=LCD_RD_Pin;
    GPIO_InitStruct.Mode=GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull=GPIO_PULLUP;
    GPIO_InitStruct.Speed=GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(GPIOD,&GPIO_InitStruct);
    //FSMC和SRAM配置，LCD和Sram时序近似所以将LCD当作SRAM来用
    //SRAM_HandleTypeDef SRAM_InitStruct;
    SRAM_InitStruct.Instance=FSMC_NORSRAM_DEVICE;
    SRAM_InitStruct.Extended=FSMC_NORSRAM_EXTENDED_DEVICE;
    SRAM_InitStruct.Init.NSBank = FSMC_NORSRAM_BANK4;                        /* 使用NE4 */
    SRAM_InitStruct.Init.DataAddressMux = FSMC_DATA_ADDRESS_MUX_DISABLE;     /* 地址/数据线不复用 */
    SRAM_InitStruct.Init.MemoryDataWidth = FSMC_NORSRAM_MEM_BUS_WIDTH_16;    /* 16位数据宽度 */
    SRAM_InitStruct.Init.BurstAccessMode = FSMC_BURST_ACCESS_MODE_DISABLE;   /* 是否使能突发访问,仅对同步突发存储器有效,此处未用到 */
    SRAM_InitStruct.Init.WaitSignalPolarity = FSMC_WAIT_SIGNAL_POLARITY_LOW; /* 等待信号的极性,仅在突发模式访问下有用 */
    SRAM_InitStruct.Init.WaitSignalActive = FSMC_WAIT_TIMING_BEFORE_WS;      /* 存储器是在等待周期之前的一个时钟周期还是等待周期期间使能NWAIT */
    SRAM_InitStruct.Init.WriteOperation = FSMC_WRITE_OPERATION_ENABLE;       /* 存储器写使能 */
    SRAM_InitStruct.Init.WaitSignal = FSMC_WAIT_SIGNAL_DISABLE;              /* 等待使能位,此处未用到 */
    SRAM_InitStruct.Init.ExtendedMode = FSMC_EXTENDED_MODE_ENABLE;           /* 读写使用不同的时序 */
    SRAM_InitStruct.Init.AsynchronousWait = FSMC_ASYNCHRONOUS_WAIT_DISABLE;  /* 是否使能同步传输模式下的等待信号,此处未用到 */
    SRAM_InitStruct.Init.WriteBurst = FSMC_WRITE_BURST_DISABLE;              /* 禁止突发写 */

    FSMC_NORSRAM_TimingTypeDef Read_Handle_InitStruct;
    Read_Handle_InitStruct.AccessMode=FSMC_ACCESS_MODE_A;
    Read_Handle_InitStruct.AddressHoldTime=0;
    Read_Handle_InitStruct.AddressSetupTime=0;
    Read_Handle_InitStruct.DataSetupTime=15;

    FSMC_NORSRAM_TimingTypeDef Write_Handle_InitStruct;
    Write_Handle_InitStruct.AccessMode=FSMC_ACCESS_MODE_A;
    Write_Handle_InitStruct.AddressHoldTime=0;
    Write_Handle_InitStruct.AddressSetupTime=0;
    Write_Handle_InitStruct.DataSetupTime=1;
    HAL_SRAM_Init(&SRAM_InitStruct,&Read_Handle_InitStruct,&Write_Handle_InitStruct);
    HAL_Delay(50);
    lcd_ex_st7789_reginit();
    //打开背光
    HAL_GPIO_WritePin(GPIOB,LCD_BL_Pin,SET);
    //设置扫描方向
    LCD_writeReg(0x36,0x08);
    LCD_clear(WHITE);
}

void lcd_ex_st7789_reginit(void)
{
    LCD_writeRegNum(0x11);

    HAL_Delay(120); 

    LCD_writeRegNum(0x36);
    LCD_writeData(0x00);


    LCD_writeRegNum(0x3A);
    LCD_writeData(0X05);

    LCD_writeRegNum(0xB2);
    LCD_writeData(0x0C);
    LCD_writeData(0x0C);
    LCD_writeData(0x00);
    LCD_writeData(0x33);
    LCD_writeData(0x33);

    LCD_writeRegNum(0xB7);
    LCD_writeData(0x35);

    LCD_writeRegNum(0xBB); /* vcom */
    LCD_writeData(0x32);  /* 30 */

    LCD_writeRegNum(0xC0);
    LCD_writeData(0x0C);

    LCD_writeRegNum(0xC2);
    LCD_writeData(0x01);

    LCD_writeRegNum(0xC3); /* vrh */
    LCD_writeData(0x10);  /* 17 0D */

    LCD_writeRegNum(0xC4); /* vdv */
    LCD_writeData(0x20);  /* 20 */

    LCD_writeRegNum(0xC6);
    LCD_writeData(0x0f);

    LCD_writeRegNum(0xD0);
    LCD_writeData(0xA4); 
    LCD_writeData(0xA1); 

    LCD_writeRegNum(0xE0); /* Set Gamma  */
    LCD_writeData(0xd0);
    LCD_writeData(0x00);
    LCD_writeData(0x02);
    LCD_writeData(0x07);
    LCD_writeData(0x0a);
    LCD_writeData(0x28);
    LCD_writeData(0x32);
    LCD_writeData(0X44);
    LCD_writeData(0x42);
    LCD_writeData(0x06);
    LCD_writeData(0x0e);
    LCD_writeData(0x12);
    LCD_writeData(0x14);
    LCD_writeData(0x17);


    LCD_writeRegNum(0XE1);  /* Set Gamma */
    LCD_writeData(0xd0);
    LCD_writeData(0x00);
    LCD_writeData(0x02);
    LCD_writeData(0x07);
    LCD_writeData(0x0a);
    LCD_writeData(0x28);
    LCD_writeData(0x31);
    LCD_writeData(0x54);
    LCD_writeData(0x47);
    LCD_writeData(0x0e);
    LCD_writeData(0x1c);
    LCD_writeData(0x17);
    LCD_writeData(0x1b); 
    LCD_writeData(0x1e);


    LCD_writeRegNum(0x2A);
    LCD_writeData(0x00);
    LCD_writeData(0x00);
    LCD_writeData(0x00);
    LCD_writeData(0xef);

    LCD_writeRegNum(0x2B);
    LCD_writeData(0x00);
    LCD_writeData(0x00);
    LCD_writeData(0x01);
    LCD_writeData(0x3f);

    LCD_writeRegNum(0x29); /* display on */
}
